Fix devicons alignment
Devicons are now centered in xs screens.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -108,6 +108,12 @@ footer {
     }
 }
 
+@media(max-width:767) {
+  .text-center {
+    align-items: center;
+  }
+}
+
 // @media(max-width: 990px) {
 //     .about-image {
 //       float: none;
@@ -119,9 +125,5 @@ footer {
 @media(max-width:767px) {
     .img-portfolio {
         margin-bottom: 15px;
-    }
-
-    header.carousel .carousel {
-        height: 70%;
     }
 }
